cmake_minimum_required (VERSION 3.8)
project ("OperatingSystem")
include(cmake/3rdparty.cmake)
include(cmake/config.cmake)
add_subdirectory(src)
add_executable (OperatingSystem OperatingSystem.cpp)
target_link_libraries(OperatingSystem PUBLIC kernel graphics)
if ((MSVC) AND (MSVC_VERSION GREATER_EQUAL 1914))
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17 /Zc:__cplusplus /D_HAS_STD_BYTE=0")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
endif()
